Connect All the html pages using the git CDN

--- a/restorent/templates/restorent/add_menue.html
+++ b/restorent/templates/restorent/add_menue.html
@@ -175,6 +175,6 @@
 </div>
 </div>
 
-<script src="/static/restorent/add_menue.js"></script>
+<script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/restorent/add_menue.js"></script>
 
 {% endblock %}
