--- a/restorent/templates/restorent/add_sitting_area.html
+++ b/restorent/templates/restorent/add_sitting_area.html
@@ -101,6 +101,6 @@
 </div>
 <!-- Table End Here -->
 
-<script src="/static/restorent/add_sitting_area.js"></script>
+<script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/restorent/add_sitting_area.js"></script>
 
 {% endblock %}
