--- a/restorent/templates/restorent/all_payments.html
+++ b/restorent/templates/restorent/all_payments.html
@@ -108,7 +108,7 @@
 </div>
 
 
-<script src="/static/restorent/payment.js"></script>
+<script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/restorent/payment.js"></script>
 {{ start_date|json_script:"start-date"}}
 {{ end_date|json_script:"end-date"}}
 
