--- a/restorent/templates/restorent/components/header.html
+++ b/restorent/templates/restorent/components/header.html
@@ -48,5 +48,5 @@
 
 {{ request.user.userprofile.restorent.pk|json_script:"restorent_id"}}
 
-<script src="/static/restorent/base.js"></script>
+<script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/restorent/base.js"></script>
 {% endif %}
