--- a/restorent/templates/restorent/dashboard.html
+++ b/restorent/templates/restorent/dashboard.html
@@ -148,6 +148,6 @@
 
 </script>
 
-<script src="/static/restorent/dashboard.js"></script>
+<script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/restorent/dashboard.js"></script>
 
 {% endblock %}
