--- a/restorent/templates/restorent/delivery_cart.html
+++ b/restorent/templates/restorent/delivery_cart.html
@@ -65,6 +65,6 @@
 
 
 
-<script src="/static/restorent/cart.js"></script>
+<script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/restorent/cart.js"></script>
 
 {% endblock %}
