--- a/restorent/templates/restorent/home_delivery.html
+++ b/restorent/templates/restorent/home_delivery.html
@@ -159,9 +159,9 @@
     <!-- cart-panel -->
 </div>
 
-<script src="/static/restorent/show_menue.js"></script>
+<script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/restorent/show_menue.js"></script>
 
 
-<script src="/static/restorent/home_delivery.js"></script>
+<script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/restorent/home_delivery.js"></script>
 
 {% endblock %}
