--- a/restorent/templates/restorent/order_profile.html
+++ b/restorent/templates/restorent/order_profile.html
@@ -385,7 +385,7 @@
 
 {{ order.pk|json_script:"order-id" }}
 
-<script src="/static/restorent/order_profile.js"></script>
+<script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/restorent/order_profile.js"></script>
 
 <!-- Tabs End -->
 {% endblock %}
