--- a/restorent/templates/restorent/payment.html
+++ b/restorent/templates/restorent/payment.html
@@ -13,7 +13,7 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
-    <link href="/static/assets/images/favicon.ico" rel="icon">
+    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/images/favicon.ico" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,16 +27,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="/static/assets/lib/animate/animate.min.css" rel="stylesheet">
-    <link href="/static/assets/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="/static/assets/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/animate/animate.min.css" rel="stylesheet">
+    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="/static/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="/static/assets/css/style.css" rel="stylesheet">
-    <link href="/static/assets/css/custom.css" rel="stylesheet">
+    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/css/style.css" rel="stylesheet">
+    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/css/custom.css" rel="stylesheet">
 
 </head>
 
@@ -66,19 +66,19 @@
                                     </p>
                                     <div class="row px-4 text-center justify-content-center">
                                         <div class="col-md-4 mb-5">
-                                            <img src="/static/assets/images/google-pay.svg" style="height: 10vh;" alt="">
+                                            <img src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/images/google-pay.svg" style="height: 10vh;" alt="">
                                         </div>
                                         <div class="col-md-4 mb-5">
-                                            <img src="/static/assets/images/phone-pay.png" style="height: 10vh;" alt="">
+                                            <img src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/images/phone-pay.png" style="height: 10vh;" alt="">
                                         </div>
                                         <div class="col-md-4 mb-5">
-                                            <img src="/static/assets/images/paytm-upi.png" style="height: 10vh;" alt="">
+                                            <img src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/images/paytm-upi.png" style="height: 10vh;" alt="">
                                         </div>
                                         <div class="col-md-4 mb-5">
-                                            <img src="/static/assets/images/bhim.png" style="height: 10vh;" alt="">
+                                            <img src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/images/bhim.png" style="height: 10vh;" alt="">
                                         </div>
                                         <div class="col-md-4 mb-5">
-                                            <img src="/static/assets/images/upi.webp" style="height: 10vh;" alt="">
+                                            <img src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/images/upi.webp" style="height: 10vh;" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -116,17 +116,17 @@
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/static/assets/lib/wow/wow.min.js"></script>
-    <script src="/static/assets/lib/easing/easing.min.js"></script>
-    <script src="/static/assets/lib/waypoints/waypoints.min.js"></script>
-    <script src="/static/assets/lib/counterup/counterup.min.js"></script>
-    <script src="/static/assets/lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="/static/assets/lib/tempusdominus/js/moment.min.js"></script>
-    <script src="/static/assets/lib/tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="/static/assets/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/wow/wow.min.js"></script>
+    <script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/easing/easing.min.js"></script>
+    <script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/waypoints/waypoints.min.js"></script>
+    <script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/counterup/counterup.min.js"></script>
+    <script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/tempusdominus/js/moment.min.js"></script>
+    <script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/tempusdominus/js/moment-timezone.min.js"></script>
+    <script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
     <!-- Template Javascript -->
-    <script src="/static/assets/js/main.js"></script>
+    <script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/js/main.js"></script>
 
 </body>
 
