--- a/restorent/templates/restorent/restorent_detail.html
+++ b/restorent/templates/restorent/restorent_detail.html
@@ -50,7 +50,7 @@
 
                         <div class="col-12 col-md-6">
                             <img class="img-fluid rounded-start w-100 h-100 object-fit-cover d-none-sm" loading="lazy"
-                                src="/static/assets//images/restorent.jpg" alt="Welcome back you've been missed!">
+                                src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets//images/restorent.jpg" alt="Welcome back you've been missed!">
                         </div>
                     </div>
                 </div>
