--- a/restorent/templates/restorent/show_menue.html
+++ b/restorent/templates/restorent/show_menue.html
@@ -121,6 +121,6 @@
     </a>
     <!-- cart-panel -->
 </div>
-<script src="/static/restorent/show_menue.js"></script>
+<script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/restorent/show_menue.js"></script>
 
 {% endblock %}
