--- a/restorent/templates/restorent/tableView.html
+++ b/restorent/templates/restorent/tableView.html
@@ -122,6 +122,6 @@
 
 {{ table.restorent.id|json_script:"restorent_id" }}
 
-<script src="/static/restorent/table_view.js"></script>
+<script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/restorent/table_view.js"></script>
 
 {% endblock %}
