--- a/restorent/templates/restorent/login.html
+++ b/restorent/templates/restorent/login.html
@@ -9,7 +9,7 @@
   <meta content="" name="description">
 
   <!-- Favicon -->
-  <link href="/static/assets/images/favicon.ico" rel="icon">
+  <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/images/favicon.ico" rel="icon">
 
   <!-- Google Web Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,15 +23,15 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
   <!-- Libraries Stylesheet -->
-  <link href="static/assets/lib/animate/animate.min.css" rel="stylesheet">
-  <link href="static/assets/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="static/assets/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+  <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/animate/animate.min.css" rel="stylesheet">
+  <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
   <!-- Customized Bootstrap Stylesheet -->
-  <link href="static/assets/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Template Stylesheet -->
-  <link href="static/assets/css/style.css" rel="stylesheet">
+  <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -44,7 +44,7 @@
             <div class="row g-0">
               <div class="col-12 col-md-6">
                 <img class="img-fluid rounded-start w-100 h-100 object-fit-cover d-none-sm" loading="lazy"
-                  src="/static/assets//images/login.jpg" alt="Welcome back you've been missed!">
+                  src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets//images/login.jpg" alt="Welcome back you've been missed!">
               </div>
               <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
                 <div class="col-12 col-lg-11 col-xl-10">
@@ -54,7 +54,7 @@
                         <div class="mb-5">
                           <div class="text-center mb-4">
                             <a href="#!">
-                              <img src="/static/assets/images/logo-svg.png" alt="Foodie Me Logo">
+                              <img src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/images/logo-svg.png" alt="Foodie Me Logo">
                               <h2 class="text-center mt-4">Foodie Me</h2>
                               <p class="text-center mt-4 text-primary fw-bold">Sign in with</p>
                             </a>
