--- a/restorent/templates/restorent/payment_added_successfully.html
+++ b/restorent/templates/restorent/payment_added_successfully.html
@@ -13,7 +13,7 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
-    <link href="/static/assets/images/favicon.ico" rel="icon">
+    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/images/favicon.ico" rel="icon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,14 +24,14 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-    <link href="/static/assets/lib/animate/animate.min.css" rel="stylesheet">
-    <link href="/static/assets/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="/static/assets/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/animate/animate.min.css" rel="stylesheet">
+    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
-    <link href="/static/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/css/bootstrap.min.css" rel="stylesheet">
 
-    <link href="/static/assets/css/style.css" rel="stylesheet">
-    <link href="/static/assets/css/custom.css" rel="stylesheet">
+    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/css/style.css" rel="stylesheet">
+    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/css/custom.css" rel="stylesheet">
 
     <style>
         body {
@@ -68,7 +68,7 @@
 
 <body>
     <div class="container text-center">
-        <img src="/static/assets/images/loader.gif" alt="Image" class="animated-image">
+        <img src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/images/loader.gif" alt="Image" class="animated-image">
         <h1 class="text-center">Payment Received successfully</h1>
     </div>
 
