--- a/restorent/templates/restorent/qr_template.html
+++ b/restorent/templates/restorent/qr_template.html
@@ -13,7 +13,7 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
-    <link href="/static/assets/images/favicon.ico" rel="icon">
+    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/images/favicon.ico" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,17 +27,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="/static/assets/lib/animate/animate.min.css" rel="stylesheet">
-    <link href="/static/assets/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="/static/assets/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/animate/animate.min.css" rel="stylesheet">
+    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="/static/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="/static/assets/css/style.css" rel="stylesheet">
-    <link href="/static/assets/css/custom.css" rel="stylesheet">
-    <link rel="stylesheet" href="/static/assets/css/pay.css">
+    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/css/style.css" rel="stylesheet">
+    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/css/custom.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/css/pay.css">
 
 </head>
 
@@ -54,7 +54,7 @@
             </span>
         </p>
         <br>
-        <img src="/static/assets/images/all_options.webp" alt="">
+        <img src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/images/all_options.webp" alt="">
         
         {% if request.user.userprofile.restorent %}
         <a href="{% url 'restorent:order_profile' order.id %}" class="btn btn-sm btn-success text-white">
@@ -70,6 +70,6 @@
 
 
 
-    <script src="/static/restorent/payment_qr.js"></script>
+    <script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/restorent/payment_qr.js"></script>
 
 </body>
