--- a/restorent/templates/restorent/show_table_status.html
+++ b/restorent/templates/restorent/show_table_status.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-<link rel="stylesheet" href="/static/assets/css/table_status.css">
+<link rel="stylesheet" href="/https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/css/table_status.css">
 
 
 <div class="container mt-5" id="remaining-part">
