adding new changes to main branch

--- a/restorent/templates/restorent/base.html
+++ b/restorent/templates/restorent/base.html
@@ -69,7 +69,7 @@
 
 
 
-        {% include 'restorent\components\header.html' %}
+        {% include 'restorent/components/header.html' %}
 
         {% block content %}
 
