--- a/restorent/templates/restorent/components/header.html
+++ b/restorent/templates/restorent/components/header.html
@@ -35,7 +35,7 @@
                 <button class="btn" type="button" disabled id="software-connocter"></button>
             </div>
             <div class="col-lg-9 col-md-8">
-                {% include 'restorent\components\form.html' %}
+                {% include 'restorent/components/form.html' %}
             </div>
         </div>
         
