--- a/restorent/templates/restorent/all_payments.html
+++ b/restorent/templates/restorent/all_payments.html
@@ -10,10 +10,10 @@
 
 {% block content %}
 
-<div class="container-xxl py-5">
+<div class="container-xxl pb-4 pt-0">
     <div class="container">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-            <h5 class="section-title ff-secondary text-center text-primary fw-normal">Orders Dashboard</h5>
+            <h5 class="section-title ff-secondary text-center text-primary fw-normal">payments Dashboard</h5>
             <h4 class="mb-5">Payment Details</h4>
         </div>
         <!-- date range picker start -->
@@ -21,8 +21,8 @@
             <div class="row mb-4">
                 <div class="col-md-10 col-lg-6 col-12">
                     <div class="row align-items-center g-3">
-                        <div class="col-lg-2 col-md-3 col-12">
-                            <label for="daterange" class="fw-bold">Filter Result</label>
+                        <div class="col-lg-3 col-md-3 col-12">
+                            <label for="daterange" class="fw-bold">Filter Results</label>
                         </div>
                         <div class="col-lg-6 col-md-6 col-12">
                             <div class="input-group">
@@ -31,9 +31,12 @@
                                     aria-label="daterange" aria-describedby="basic-addon1">
                             </div>
                         </div>
+
+                        <input type="number" id="page_number" name="page" style="display: none;">
+
                         <div class="col-lg-3 col-md-3 col-12">
 
-                            <button type="submit" class="btn btn-primary"> Submit</button>
+                            <button type="submit" class="btn btn-primary" id="submit-button"> Submit</button>
                         </div>
                     </div>
                 </div>
@@ -101,6 +104,54 @@
                             {% endfor %}
                         </tbody>
                     </table>
+
+                    
+                    <nav aria-label="">
+                        <ul class="pagination justify-content-end mb-0">
+                            {% if payments.has_previous %}
+                            <li class="page-item">
+                                <a class="page-link" onclick="OpenPage('1')" tabindex="-1">
+                                    <i class="fas fa-angle-left"></i>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                            </li>
+
+                            <li class="page-item">
+                                <a class="page-link" onclick="OpenPage('{{ payments.previous_page_number }}')" tabindex="-1">
+                                    {{ payments.previous_page_number }}
+                                </a>
+                            </li>
+                            {% endif %}
+
+
+                            <li class="page-item active">
+                                <a class="page-link" href="#">{{payments.number}}</a>
+                            </li>
+
+                            {% if payments.has_next %}
+
+                            <li class="page-item">
+                                <a onclick="OpenPage('{{ payments.next_page_number }}')" class="page-link">
+                                    {{ payments.next_page_number}}
+                                </a>
+                            </li>
+
+                            <li class="page-item">
+                                <a onclick="OpenPage('{{ payments.next_page_number }}')" class="page-link">
+                                    <i class="fas fa-angle-right"></i>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </li>
+
+                            {% endif %}
+                        </ul>
+                    </nav>
+
+                    <span class="current">
+                        Page {{ payments.number }} of {{ payments.paginator.num_pages }}.
+                    </span>
+
+
                 </div>
             </div>
         </div>
@@ -108,7 +159,7 @@
 </div>
 
 
-<script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/restorent/payment.js"></script>
+<script src="/static/restorent/payment.js"></script>
 {{ start_date|json_script:"start-date"}}
 {{ end_date|json_script:"end-date"}}
 
@@ -137,6 +188,12 @@
             }
         });
     });
+
+    function OpenPage(page_number) {
+        page_number = JSON.parse(page_number);
+        document.getElementById('page_number').value = page_number;
+        document.getElementById('submit-button').click();
+    }
 </script>
 
 {% endblock %}
