--- a/restorent/templates/restorent/add_tax.html
+++ b/restorent/templates/restorent/add_tax.html
@@ -11,7 +11,7 @@
 {% block content %}
 
 
-<div class="container-xxl py-5">
+<div class="container-xxl pb-4 pt-2">
     <div class="container">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
             <h5 class="section-title ff-secondary text-center text-primary fw-normal">Orders Dashboard</h5>
