--- a/restorent/templates/restorent/base.html
+++ b/restorent/templates/restorent/base.html
@@ -14,7 +14,7 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
-    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/images/favicon.ico" rel="icon">
+    <link href="/static/assets/images/favicon.ico" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,18 +26,18 @@
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/daterangepicker/daterangepicker.css">
+    <link rel="stylesheet" href="/static/assets/lib/daterangepicker/daterangepicker.css">
     <!-- Libraries Stylesheet -->
-    <!-- <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/animate/animate.min.css" rel="stylesheet">
-    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" /> -->
+    <!-- <link href="/static/assets/lib/animate/animate.min.css" rel="stylesheet">
+    <link href="/static/assets/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="/static/assets/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" /> -->
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/assets/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/css/style.css" rel="stylesheet">
-    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/css/custom.css" rel="stylesheet">
+    <link href="/static/assets/css/style.css" rel="stylesheet">
+    <link href="/static/assets/css/custom.css" rel="stylesheet">
 </head>
 
 <body>
@@ -84,19 +84,19 @@
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/tempusdominus/js/moment.min.js"></script>
-    <script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/daterangepicker/daterangepicker.js"></script>
-    <!-- <script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/wow/wow.min.js"></script>
-    <script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/easing/easing.min.js"></script>
-    <script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/waypoints/waypoints.min.js"></script>
-    <script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/counterup/counterup.min.js"></script>
-    <script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/tempusdominus/js/moment.min.js"></script>
-    <script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script> -->
+    <script src="/static/assets/lib/tempusdominus/js/moment.min.js"></script>
+    <script src="/static/assets/lib/daterangepicker/daterangepicker.js"></script>
+    <!-- <script src="/static/assets/lib/wow/wow.min.js"></script>
+    <script src="/static/assets/lib/easing/easing.min.js"></script>
+    <script src="/static/assets/lib/waypoints/waypoints.min.js"></script>
+    <script src="/static/assets/lib/counterup/counterup.min.js"></script>
+    <script src="/static/assets/lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="/static/assets/lib/tempusdominus/js/moment.min.js"></script>
+    <script src="/static/assets/lib/tempusdominus/js/moment-timezone.min.js"></script>
+    <script src="/static/assets/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script> -->
 
     <!-- Template Javascript -->
-    <script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/js/main.js"></script>
+    <script src="/static/assets/js/main.js"></script>
 
     
 
