--- a/restorent/templates/restorent/dashboard.html
+++ b/restorent/templates/restorent/dashboard.html
@@ -9,7 +9,7 @@
 {% block content %}
 
 
-<div class="container-xxl py-5 bg-grey dashboard">
+<div class="container-xxl pb-4 pt-2 bg-grey dashboard">
     <div class="px-3">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
             <h5 class="section-title ff-secondary text-center text-primary fw-normal">Main Dashboard</h5>
