--- a/restorent/templates/restorent/payment_added_successfully.html
+++ b/restorent/templates/restorent/payment_added_successfully.html
@@ -13,7 +13,7 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
-    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/images/favicon.ico" rel="icon">
+    <link href="/static/assets/images/favicon.ico" rel="icon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,14 +24,14 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/animate/animate.min.css" rel="stylesheet">
-    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+    <link href="/static/assets/lib/animate/animate.min.css" rel="stylesheet">
+    <link href="/static/assets/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="/static/assets/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
-    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/assets/css/bootstrap.min.css" rel="stylesheet">
 
-    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/css/style.css" rel="stylesheet">
-    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/css/custom.css" rel="stylesheet">
+    <link href="/static/assets/css/style.css" rel="stylesheet">
+    <link href="/static/assets/css/custom.css" rel="stylesheet">
 
     <style>
         body {
@@ -68,67 +68,17 @@
 
 <body>
     <div class="container text-center">
-        <img src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/images/loader.gif" alt="Image" class="animated-image">
+        <img src="/static/assets/images/loader.gif" alt="Image" class="animated-image">
         <h1 class="text-center">Payment Received successfully</h1>
+        <a href="{% url 'restorent:order_profile' order.pk %}"  id="order_status">l</a>
     </div>
 
     <script>
-        // Define the Queue class
-        class Queue {
-            constructor() {
-                this.items = [];
-            }
-
-            enqueue(element) {
-                this.items.push(element);
-            }
-
-            dequeue() {
-                if (this.isEmpty()) {
-                    return undefined;
-                }
-                return this.items.shift();
-            }
-
-            isEmpty() {
-                return this.items.length === 0;
-            }
+        function delayRedirect() {
+            setTimeout(function () {
+                document.getElementById('order_status').click()
+            }, 5000); // 5000 milliseconds = 5 seconds
         }
-
-        // Initialize a queue instance
-        var queue = new Queue();
-
-        // Function to create and enqueue audio elements
-        function playAudio() {
-            var audio = document.createElement('audio');
-            var source = document.createElement('source');
-            source.src = "https://www.dopagentsoftware.com/assets/sound/notification-v2.mp3";
-            audio.appendChild(source);
-
-            // Append the audio element to the body (or any other container)
-            document.body.appendChild(audio);
-
-            // Enqueue the audio element for playback
-            queue.enqueue(audio);
-        }
-
-        // Function to play audio notifications from the queue
-        setInterval(function () {
-            var audio = queue.dequeue();
-            if (audio !== undefined) {
-                audio.play().catch(function (error) {
-                    console.error("Audio play failed:", error);
-                });
-
-                // Remove the audio element after playback
-                setTimeout(function () {
-                    audio.remove();
-                }, 1000); // Duration of sound clip (adjust as necessary)
-            }
-        }, 300); // Check the queue every 300ms
-
-        // Example usage: Call playAudio() to add audio to the queue
-        playAudio(); // Call this whenever you want to play a notification sound
-
+        delayRedirect()
     </script>
 </body>
