--- a/restorent/templates/restorent/qr_template.html
+++ b/restorent/templates/restorent/qr_template.html
@@ -13,7 +13,7 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
-    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/images/favicon.ico" rel="icon">
+    <link href="/static/assets/images/favicon.ico" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,17 +27,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/animate/animate.min.css" rel="stylesheet">
-    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+    <link href="/static/assets/lib/animate/animate.min.css" rel="stylesheet">
+    <link href="/static/assets/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="/static/assets/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/assets/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/css/style.css" rel="stylesheet">
-    <link href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/css/custom.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/css/pay.css">
+    <link href="/static/assets/css/style.css" rel="stylesheet">
+    <link href="/static/assets/css/custom.css" rel="stylesheet">
+    <link rel="stylesheet" href="/static/assets/css/pay.css">
 
 </head>
 
@@ -49,17 +49,27 @@
         </span>
         <p class=" text-center section-title ff-secondary  text-start text-end">Scan The QR and Pay</p>
         <img src="/media/qr_images/qr{{order.id}}.png" alt="QR Code" id="qr-image" class="img-fluid my-3">
+        <p style="margin: 0 12%; border-radius: 9px; background: #dae6ec;" class="text-center section-title ff-secondary text-dark text-start text-end">
+            <span>upi:</span>
+            <span id="upi_id" class="ff-secondary">{{restorent.upi_id}}</span>
+            <span id="copyBtn"  class="btn-sm btn-info" style="cursor: pointer;"> <i class="fa fa-clone" aria-hidden="true"></i> copy</span>
+        </p>
+        <span id="popupText" class="popup text-center">Copied!</span>
+
         <p class=" text-center section-title ff-secondary text-start text-end">Total: ₹ <span class="ff-secondary" style="color: black; font-weight: bold;">
                 {{total_amount}}
             </span>
         </p>
         <br>
-        <img src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/assets/images/all_options.webp" alt="">
-        
+        <img src="/static/assets/images/all_options.webp" alt="">
         {% if request.user.userprofile.restorent %}
         <a href="{% url 'restorent:order_profile' order.id %}" class="btn btn-sm btn-success text-white">
             pay later
         </a>
+        {% else %}
+        <button class="btn btn-sm btn-info text-white" onclick="shareQr()">
+            Pay with Gogal Pay
+        </button>
         {% endif %}
 
     </div>
@@ -70,6 +80,6 @@
 
 
 
-    <script src="https://guru-sevak-singh.github.io/restorent-static/staticfiles/restorent/payment_qr.js"></script>
+    <script src="/static/restorent/payment_qr.js"></script>
 
 </body>
