--- a/restorent/templates/restorent/settings.html
+++ b/restorent/templates/restorent/settings.html
@@ -10,6 +10,34 @@
 
 {% block content %}
 
+<!-- Add category -->
+<div class="modal fade" id="logout" tabindex="-1" role="dialog" aria-labelledby="logoutTitle"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Log Out</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+
+            </div>
+            <form method="post" action="{% url 'restorent:logout' %}">
+                <div class="modal-body">
+                    {% csrf_token %}
+                    <div class="card-title">
+                        Do You Want to Logout !
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary btn-custom" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-danger">Logout</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+
+
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-sm-12 mt-5">
@@ -72,6 +100,19 @@
                             <i class="fa fa-building" aria-hidden="true"></i>
                         </span>
                         Add Tax
+                    </h5>
+                </a>
+            </div>
+        </div>
+
+        <div class="col-md-6 col-sm-12 mt-5">
+            <div class="card">
+                <a class="card-body" href="#"  data-bs-toggle="modal" data-bs-target="#logout">
+                    <h5 class="card-title">
+                        <span>
+                            <i class="fa fa-user" aria-hidden="true"></i>
+                        </span>
+                        Log out
                     </h5>
                 </a>
             </div>
