--- a/restorent/templates/restorent/base.html
+++ b/restorent/templates/restorent/base.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-        {% block title %}
+    {% block title %}
 
-        {% endblock %}
+    {% endblock %}
 
 
 
@@ -38,6 +38,21 @@
     <!-- Template Stylesheet -->
     <link href="/static/assets/css/style.css" rel="stylesheet">
     <link href="/static/assets/css/custom.css" rel="stylesheet">
+
+    <!-- for push notification -->
+    <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
+    <script>
+        window.OneSignalDeferred = window.OneSignalDeferred || [];
+        OneSignalDeferred.push(async function (OneSignal) {
+            await OneSignal.init({
+                appId: "a98f458f-d4ec-44ab-b082-7d733432fc86",
+                safari_web_id: "web.onesignal.auto.002ea938-3ebd-4740-ada1-6c17c5eb4600",
+                notifyButton: {
+                    enable: true,
+                },
+            });
+        });
+    </script>
 </head>
 
 <body>
@@ -54,7 +69,8 @@
         {% for message in messages %}
         <div style="position: fixed;top: 5%; z-index: 1; width: 98vw; margin: 0 auto; padding: 0 2%;">
             {% if message %}
-            <div class="alert alert-{% if message.tags == 'error' %}danger {% else %}{{ message.tags }} {% endif %} row" role="alert">
+            <div class="alert alert-{% if message.tags == 'error' %}danger {% else %}{{ message.tags }} {% endif %} row"
+                role="alert">
                 <div class="text-left col-6">
                     {{ message }}
                 </div>
@@ -82,6 +98,9 @@
 
     <!-- JavaScript Libraries -->
     <!-- JavaScript Libraries -->
+    <script>
+        importScripts("https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.sw.js");
+    </script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/static/assets/lib/tempusdominus/js/moment.min.js"></script>
@@ -98,7 +117,31 @@
     <!-- Template Javascript -->
     <script src="/static/assets/js/main.js"></script>
 
-    
+    <script>
+        function subscribeUser() {
+            navigator.serviceWorker.register("/static/sw.js").then(function(registration) {
+                return registration.pushManager.subscribe({
+                    userVisibleOnly: true,
+                    applicationServerKey: "BFpGQtsPz6TP2WKMCJqyvY4DQ751x6JqSEHRdIUcJmxTvuGDpc16qMUW7xvD2a9zdtmmlyS-KVJwC_0xLPoKz4Q="
+                });
+            }).then(function(subscription) {
+                fetch("/webpush/subscribe/", {
+                    method: "POST",
+                    body: JSON.stringify(subscription),
+                    headers: {
+                        "Content-Type": "application/json"
+                    }
+                });
+            });
+        }
+        
+        if ("serviceWorker" in navigator) {
+            subscribeUser();
+        }
+        </script>
+        
+
+
 
 </body>
 
