--- a/restorent/templates/restorent/components/header.html
+++ b/restorent/templates/restorent/components/header.html
@@ -3,7 +3,7 @@
 <div class="container-xxl position-relative p-0">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4 px-lg-5 py-lg-0 nav-custom">
         <a href="" class="navbar-brand p-0">
-            <h3 class="text-primary m-0"><i class="fa fa-utensils me-3"></i>{{request.user.userprofile.restorent.name}}</h3>
+            <h3 class="text-primary m-0"><i class="fa fa-utensils me-3"></i>the Open Table</h3>
             <!-- <img src="assets/images/logo.png" alt="Logo"> -->
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
